Documentation bug fix with z-index

--- a/_style/scss/templates/documentation.scss
+++ b/_style/scss/templates/documentation.scss
@@ -12,6 +12,7 @@
     background-color: #f1f1f1;
     padding: 2em 0;
     width:  100%;
+    z-index: 3;
     }
         
     @media (min-width: 40em) {
